[project]
name = "intphys"
version = "0.1.0"
description = "A benchmark for visual intuitive physics reasoning"
requires-python = ">=3.12"
dependencies = [
    "hai-adapters",
    "hai-protocols",
    "python-dotenv>=1.2.2",
]

[tool.uv.sources]
hai-protocols = { path = "../hai/protocols", editable = true }
hai-adapters = { path = "../hai/hai_adapters", editable = true }

[tool.ruff]
line-length = 100
